Image width fix for overflow on mobile issue

--- a/src/css/components/photography.css
+++ b/src/css/components/photography.css
@@ -13,7 +13,7 @@ body {
   }
 
   & img {
-    width: 75vw;
+    width: 70vw;
     max-width: 64rem;
     height: auto;
   }
